Minor spacing fix

--- a/styles/Produkt.module.css
+++ b/styles/Produkt.module.css
@@ -80,7 +80,7 @@
   font-size: 16px;
 }
 .artPieceDetails {
-  margin: 0 2px 20px;
+  margin: 0 2px 10px;
   font-size: 16px;
 }
 .artPieceSubTitle {
